[package]
name = "node-rpc-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
futures-preview = "0.3.0-alpha.17"
hyper = "0.12"
jsonrpc-core-client = { version = "12.0.0", features = ["http", "ws"] }
log = "0.4"
node-primitives = { path = "../primitives" }
substrate-rpc = { path = "../../core/rpc", version = "2.0.0" }
